--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@ pool and bootstrap the project's initial operations.
             </div>
             <div style="opacity: 0" class="memeber-box-text">
               <div class="label">
-                top 50 token<br /><br />eXCLUSIVE PEEPO PARTIES AND EVENTS
+                top 50 token<br /><br />eXCLUSIVE Pandapals. PARTIES AND EVENTS
               </div>
             </div>
           </div>
