--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ pool and bootstrap the project's initial operations.
         <div class="div-block-3">
           <p class="paragraph-2">
             Presale : 35% <br><br>Public Sale : 35% <br><br>Development : 30% <br><br>
-           TAX : 0% <br /><br>LP : Locked<br />‍‍<br />Contract Address:<br />xxxxxxxxxxxxxxxxxxxxx<br />‍<br />
+           TAX : 0% <br /><br>LP : Locked<br />‍‍<br />Contract Address:<br />FL5nfr6hh11aVuT1yuW2TySEWEsxWCu4ZmcWR6aHXUUn<br />‍<br />
           </p>
           <div class="div-block-2">
             <div>
