--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             loading="lazy"
             alt="" /></a
         ><a
-          href="https://solscan.io/account/9W3Htfd9yfdE7jaXMFrKMRFnmT6uKhUPegMoK42h52v6"
+          href="https://solsale.app/presale/DEEynd2CPWK3LrHbKXTeBBG5RzZZW1mh3bQF39YzH743"
           target="_blank"
           class="lblock w-inline-block"
           ><img
