--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
           target="_blank"
           class="lblock w-inline-block"
           ><img
-            src="https://assets-global.website-files.com/6443ba14b67dfe5ffc3eb3ca/65cd18aba6fad8a175c1f4ad_solscan-removebg-preview.png"
+            src="/presale.svg"
+            style="max-width: 53px;"
             loading="lazy"
             alt="" /></a
         ><a
