--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             <a href="/" class="nav-link w-nav-link">home</a
             ><a href="#Questionmark" class="nav-link w-nav-link">tokenomics</a
             ><a href="#roadmap" class="nav-link w-nav-link">roadmap</a
+            ><a href="https://whitepaper.pandapals.xyz/" class="nav-link w-nav-link">whitepaper</a
             ><a
               href="buylink"
               target="_blank"
@@ -953,7 +954,13 @@ pool and bootstrap the project's initial operations.
                 href="https://t.me/+NC-nFzl5VfA2ODhh"
                 target="_blank"
                 class="nav-link cursor-hide w-inline-block"
-                ><div class="text-block-6">telegram</div></a
+                ><div class="text-block-6">Telegram</div></a
+              ><a
+                data-w-id="4b04d0be-b4af-3c8b-1550-a61d583ec690"
+                href="https://whitepaper.pandapals.xyz/"
+                target="_blank"
+                class="nav-link cursor-hide w-inline-block"
+                ><div class="text-block-6">Whitepaper</div></a
               >
             </div>
           </div>
