--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="/" class="nav-link w-nav-link">home</a
             ><a href="#Questionmark" class="nav-link w-nav-link">tokenomics</a
             ><a href="#roadmap" class="nav-link w-nav-link">roadmap</a
-            ><a href="https://whitepaper.pandapals.xyz/" class="nav-link w-nav-link">whitepaper</a
+            ><a href="https://whitepaper.pandapals.xyz/" target="_blank" class="nav-link w-nav-link">whitepaper</a
             ><a
               href="buylink"
               target="_blank"
@@ -96,10 +96,10 @@
             </a>
             <div class="social-links mobile">
               <a
-                href="https://twitter.com/PandaPalsToken"
+                href="https://twitter.com/PandaPalsToken" target="_blank"
                 class="nav-link w-inline-block"
                 ><div>twitter</div></a
-              ><a href="https://t.me/+NC-nFzl5VfA2ODhh" class="nav-link w-inline-block"
+              ><a href="https://t.me/+NC-nFzl5VfA2ODhh" target="_blank" class="nav-link w-inline-block"
                 ><div>TELEGRAM</div></a
               ><a
                 href="chartlink"
