--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@ pool and bootstrap the project's initial operations.
           class="footer-wrapper"
         >
           <div class="footer-block _35-padding-left">
-            <div class="footer-menu">
+            <div class="footer-menu" style="gap:15px;">
               <a
                 href="#peepo"
                 data-w-id="d8ec8eb2-97b2-021b-9a9b-ed19629910c7"
