--- a/index.html
+++ b/index.html
@@ -964,7 +964,8 @@ pool and bootstrap the project's initial operations.
               >
             </div>
           </div>
-          <div class="social-links _50-margin-top _35-margin-left">
+          <div class="social-links _50-margin-top _35-margin-left" style="display: flex; justify-content: center; gap: 15px; align-items: center;flex-wrap: nowrap;">
+
             <a
               data-w-id="739297fa-81a0-ef21-a1aa-9ffa6d4f153a"
               href="mailto:pandapalstoken@yahoo.com"
@@ -972,6 +973,8 @@ pool and bootstrap the project's initial operations.
               ><div class="text-block-9">
                 <strong>pandapalstoken@yahoo.com</strong><br /></div
             ></a>
+            <a href="https://solsale.app/presale/all" target="_blank">
+              <img src="/gempad.png" style="max-width: 80px;" alt=""></a>
           </div>
         </div>
       </div>
